
# -------------------------------------------------------------------------------------------------|

[package]
name = "Broken-Source-Projects"
version = "2023.10.14"
edition = "2021"
authors = ["Tremeschin <tremeschin@users.noreply.github.com>"]
description = "Broken Source Software Monorepo"
repository = "https://github.com/BrokenSource/BrokenSource"

# -------------------------------------------------------------------------------------------------|

[lib]
name = "Broken"
path = "Rust/Broken.rs"

# -------------------------------------------------------------------------------------------------|

[[bin]]
name = "Ardmin"
path = "Projects/Ardmin/Main.rs"

[[bin]]
name = "AudioSight"
path = "Projects/AudioSight/Main.rs"
required-features = [
    "cpal",
]

[[bin]]
name = "Harper"
path = "Projects/Harper/Main.rs"
required-features = [
    "egui",
    "midi",
]

[[bin]]
name = "HypeWord"
path = "Projects/HypeWord/Main.rs"
required-features = [
    "raqote",
]

[[bin]]
name = "Mock" #"testing" / staging
path = "Broken/Rust/Mock/Main.rs"
required-features = [
    "ffmpeg",
    "bevy",
]

[[bin]]
name = "PhasorFlow"
path = "Projects/PhasorFlow/Main.rs"
required-features = [
    "skia",
    "ndarray",
]

[[bin]]
name = "PocketSolar"
path = "Projects/PocketSolar/Main.rs"
required-features = [
    "egui",
    "serialport",
]

[[bin]]
name = "ShaderFlow"
path = "Projects/ShaderFlow/Main.rs"
required-features = [
    "egui",
    # "ndarray",
    "midi",
    "shaders",
]

# -------------------------------------------------------------------------------------------------|

[features]
default = []
audio   = ["dep:rodio"]
cairo   = ["dep:cairo-rs"]
cpal    = ["dep:cpal"]
egui    = ["dep:egui", "dep:eframe"]
midi    = ["dep:midly", "dep:bincode"]
ndarray = ["dep:ndarray", "dep:ndarray-linalg"]
raqote  = ["dep:raqote"]
shaders = ["dep:wgpu", "dep:winit"]
skia    = ["dep:skia-safe"]

# Binaries Broken will include
ffmpeg = []
ytdlp  = []

# -------------------------------------------------------------------------------------------------|

[dependencies]

# Math / time / iterables
libm = "0.2.5"
num = {version="0.4.0", features=["libm", "serde", "rand"]}
chrono = "0.4.22"
itertools = "0.10.5"
unordered-pair = {version="0.2.4", features=["serde"]}
uuid = {version="1.3.2", features=["v4", "fast-rng"]}

# Serialization / Data Structures
toml = "0.5.9"
serde = {version="1.0.145", features=["derive", "rc"]}
serde_derive = "1.0.145"
serde_json = "1.0.86"
strum = {version="0.24.1", features=["derive"]}
strum_macros = "0.24.3"

# Logging / CLI
clap = {version="4.0.10", features=["derive", "color", "error-context", "suggestions", "usage"]}
fern = {version="0.6.1", features=["chrono", "colored", "date-based"]}
log = "0.4.17"

# Others
lru-cache = "0.1.2"

# Threading / raw performance
num_cpus = "1.15.0"
rayon = "1.7.0"
hashbrown = {version="0.13.2", features=["serde"]}

# Path
tempfile = "3.3.0"
directories = "4.0.1"
glob = "0.3.1"
rust-embed = "6.4.1" # TODO: Windows icons?

# "Builder"-like syntax, derives
derive_setters = "0.1.5"
derive-new = "0.5.9"
smart-default = "0.6.0"
derivative = "2.2.0"

# String utils
str-macro = "1.0.0"
fstrings = "0.2.3"
regex = "1.7.1"

# "Global" variables
lazy_static = "1.4.0"
once_cell = "1.17.1"

# Unsorted
serde_with = "2.3.1"
rand = "0.8.5"

# -------------------------------------------------------------------------------------------------|

# Feature: [bevy]
bevy = {version="0.10.1", optional=true}

# Feature: [cairo]
cairo-rs = {version="0.17.0", optional=true, features=["pdf", "png", "svg"]}

# Feature: [cpal] Audio capture, playback
cpal = {version="0.15.2", optional=true}

# Feature: [egui]
eframe = {version="0.21.0", optional=true, features=["persistence"]}
egui = {version="0.21.0", optional=true, features=["persistence"]}

# Feature: [midi]
midly = {version="0.5.3", optional=true}
bincode = {version="1.3.3", optional=true}

# Feature: [raqote]
raqote = {version="0.8.2", optional=true}

# Feature: [reqwest] Requests, web, downloads
reqwest = {version="0.11.17", optional=true, features=["blocking"]}

# Feature: [serialport]
serialport = {version="4.2.0", optional=true}

# Feature: [shaders]
wgpu = {version="0.15.1", optional=true}
winit = {version="0.28.1", optional=true}

# Feature: [skia]
skia-safe = {version="0.60.0", optional=true}

# Feature: [ndarray] NumPy-like arrays, linear algebra
ndarray = {version="0.15.6", optional=true}

# FIXME: Packages above / below may be wrongly places by cargo add

[target.'cfg(windows)'.dependencies]
ndarray-linalg = {version="0.16.0", optional=true, features=["netlib-static"]}
[target.'cfg(not(windows))'.dependencies]
ndarray-linalg = {version="0.16.0", optional=true, features=["intel-mkl-static"]}
[target.'cfg(all())'.dependencies]

# Feature: [audio]
rodio = {version="0.17.1", optional=true}

# -------------------------------------------------------------------------------------------------|

[profile.ultra]
inherits = "release"
panic = "abort"
opt-level = 3
strip = true
lto = true

# -------------------------------------------------------------------------------------------------|
