[project.urls]
Funding   = "https://github.com/sponsors/Tremeschin/"
GitHub    = "https://github.com/BrokenSource/BrokenSource/"
Changelog = "https://brokensrc.dev/about/changelog/"
Contact   = "https://brokensrc.dev/about/contact/"
Download  = "https://brokensrc.dev/get/releases/"
Docs      = "https://brokensrc.dev/broken/"
Homepage  = "https://brokensrc.dev/"

[project]
name         = "broken-source"
description  = "🚀 Broken Source Software Main Library"
authors      = [{name="Tremeschin", email="29046864+Tremeschin@users.noreply.github.com"}]
dynamic      = ["keywords"]
version      = "0.10.0"
readme       = ".github/readme.md"
license      = "AGPL-3.0"
requires-python = ">=3.10"
dependencies = [
    # Data Structures
    "attrs~=25.3.0",
    "pydantic~=2.11.7",
    "dotmap~=1.3.30",
    "aenum~=3.1.16",
    "pyyaml~=6.0.2",
    "toml~=0.10.2",
    # Utils
    "loguru~=0.7.3",
    "typer~=0.17.3",
    "rich~=14.1.0",
    "xxhash~=3.5.0",
    "platformdirs~=4.4.0",
    "validators~=0.35.0",
    "distro~=1.9.0",
    "setuptools",
    "packaging",
    # Internet
    "requests-cache~=1.2.1",
    "requests~=2.32.5",
]

[project.optional-dependencies]
extra = [
    "pillow",
    "numpy",
    # Data structures
    "intervaltree~=3.1.0",
    "cachetools~=6.2.0",
    "diskcache~=5.6.3",
    # Utils
    "halo~=0.0.31",
    "tqdm~=4.67.1",
    "dill~=0.4.0",
    "uv~=0.8.14",
]

[dependency-groups]
dev = [
    # Website and documentation
    "mkdocs~=1.6.1",
    "mkdocstrings~=0.30.0",
    "mkdocstrings-python~=1.18.2",
    "mkdocs-gen-files~=0.5.0",
    "mkdocs-autorefs~=1.4.3",
    "mkdocs-section-index~=0.3.10",
    "mkdocs-material~=9.6.18",
    "mkdocs-minify-plugin~=0.8.0",
    "mkdocs-site-urls~=0.3.0",
    "markdown-callouts~=0.4.0",
    "cairosvg~=2.8.2",
    "black~=25.1.0",
    # Build system and testing
    "pytest-sugar~=1.1.1",
    "hatchling~=1.27.0",
    # Profiling tools
    "snakeviz~=2.2.2",
    "tuna~=0.5.11",
    # Staging
    "yt-dlp~=2025.8.27",
    "ollama~=0.5.3",
]

[project.scripts]
broken = "broken.__main__:main"

# ---------------------------------------------------------------------------- #
# Hatchling

[build-system]
requires = ["hatchling", "hook@git+https://github.com/BrokenSource/Hook/"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.plugin]

[tool.hatch.build.targets.wheel]
packages = ["broken"]

# ---------------------------------------------------------------------------- #
# Astral/uv

[tool.uv.pip]
compile-bytecode = false

[tool.uv]
python-preference = "only-managed"
check-url = "https://pypi.org/simple"
compile-bytecode = false

[tool.uv.workspace]
members = [
    "packages/*",
    "projects/*",
    "meta/*",
]

[tool.uv.sources]
broken-source = {workspace=true}
shaderflow    = {workspace=true}
depthflow     = {workspace=true}
hook          = {workspace=true}

# ---------------------------------------------------------------------------- #
# Ruff

[tool.ruff.format]
exclude = ["*"]

[tool.ruff.lint]
ignore = [
    "E402", # Late/runtime imports are ok for torch
    "E701", # Rarely, this looks better than new line
    "E731", # Lambdas can be more readable at times
    "E741", # Don't tell the electrical engineers
    "F401", # Init files may re-export 'unused' stuff..
    "F403", # Star imports can be useful at times
    "F541", # Useful in multi-line f-strings..
]

# ---------------------------------------------------------------------------- #
# Tests

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-p no:cacheprovider",
    "--no-header",
    "--tb=short",
    "-v",
    "-ra",
]
python_classes = "__PyTest__"
python_files = ["core/*.py"]
