[project.urls]
Funding   = "https://github.com/sponsors/Tremeschin/"
GitHub    = "https://github.com/BrokenSource/BrokenSource/"
Changelog = "https://brokensrc.dev/about/changelog/"
Contact   = "https://brokensrc.dev/about/contact/"
Download  = "https://brokensrc.dev/get/releases/"
Docs      = "https://brokensrc.dev/broken/"
Homepage  = "https://brokensrc.dev/"

[project]
name         = "broken-source"
description  = "🚀 Broken Source Software Main Library"
authors      = [{name="Tremeschin"}]
dynamic      = ["keywords"]
version      = "0.10.0"
readme       = "readme.md"
license      = "AGPL-3.0"
requires-python = ">=3.10"
dependencies = [
    # Data Structures
    "attrs~=25.4",
    "pydantic~=2.12",
    "dotmap~=1.3",
    "pyyaml~=6.0",
    "tomli~=2.3",

    # Utils
    "loguru~=0.7",
    "typer~=0.20",
    "rich~=14.2",
    "xxhash~=3.6",
    "platformdirs~=4.5",
    "validators~=0.35",
    "distro~=1.9",
    "packaging",

    # Internet
    "requests-cache~=1.2",
    "requests~=2.32",
]

[project.optional-dependencies]
extra = [
    "pillow",
    "numpy",

    # Data structures
    "intervaltree~=3.1",
    "cachetools~=6.2",
    "diskcache~=5.6",

    # Utils
    "halo",
    "tqdm~=4.67",
    "dill~=0.4",
    "uv~=0.9",
]

[dependency-groups]
dev = [
    # Website
    "zensical",

    # Build system and testing
    "pytest-sugar~=1.1",
    "hatchling~=1.27",

    # Profiling tools
    "snakeviz~=2.2",
    "tuna~=0.5",

    # Staging
    "ollama~=0.6",
    "yt-dlp",
]

[project.scripts]
broken = "broken.__main__:main"

# ---------------------------------------------------------------------------- #
# Hatchling

[build-system]
requires = ["hatchling", "hook@git+https://github.com/BrokenSource/Hook/"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.plugin]

[tool.hatch.build.targets.wheel]
packages = ["broken"]

# ---------------------------------------------------------------------------- #
# Astral/uv

[tool.uv]
python-preference = "only-managed"

[tool.uv.workspace]
members = [
    "packages/*",
    "projects/*",
    "meta/*",
]

[tool.uv.sources]
broken-source = {workspace=true}
depthflow     = {workspace=true}
hook          = {workspace=true}
shaderflow    = {workspace=true}
typenaut      = {workspace=true}

# ---------------------------------------------------------------------------- #
# Ruff

[tool.ruff.format]
exclude = ["*"]

[tool.ruff.lint]
ignore = [
    "E402", # Late/runtime imports are ok for torch
    "E701", # Rarely, this looks better than new line
    "E731", # Lambdas can be more readable at times
    "E741", # Don't tell the electrical engineers
    "F401", # Init files may re-export 'unused' stuff..
    "F403", # Star imports can be useful at times
    "F541", # Useful in multi-line f-strings..
]

# ---------------------------------------------------------------------------- #
# Tests

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "-p no:cacheprovider",
    "--no-header",
    "--tb=short",
    "-v",
    "-ra",
]
python_classes = "__pytest__"
python_files = [
    "enumx.py",
    "resolution.py",
]
